updated readme to add image of the project

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ MidtermProject/MidtermApp/__pycache__
 MidtermProject/MidtermApp/migrations
 MidtermProject/db.sqlite3
 MidtermProject/MitdtermProject/__pycache__
+
+images
+
+.ipynb_checkpoints
